--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.5.1",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "form-data": "^4.0.0",
-    "request": "^2.88.2"
+    "form-data": "^4.0.0"
   }
 }
