--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "@biomejs/biome": "1.2.2",
-    "bun-types": "^1.0.5-canary.20231008T140131"
+    "@biomejs/biome": "^1.5.3",
+    "bun-types": "^1.0.26"
   },
   "dependencies": {
-    "@stricjs/router": "^5.0.0",
-    "@stricjs/utils": "^1.5.5"
+    "@stricjs/router": "^5.0.6",
+    "@stricjs/utils": "^2.0.7"
   }
 }
